# Text-Editor

./: CMakeLists.txt  FileDialog.hpp  Menu_bar.hpp  MyApp.hpp  README.md  main.cpp  openDialog.cpp  saveDialog.cpp
lib/imgui/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl2.cpp  imgui_impl_opengl2.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
lib/nativefiledialog/: CMakeLists.txt
